--- a/home/templates/home/hero.html
+++ b/home/templates/home/hero.html
@@ -7,7 +7,7 @@
   Ends Here
 </h2>
 <p class="mt-3 text-base text-gray-50 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-  If you are looking for a reliable freelance full-stack developer. Look no further.
+  If you are looking for a reliable freelance full-stack developer to assist your business. Look no further.
 </p>
 <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
   <div class="rounded-md shadow">
